--- a/src/styles/Roomnew.css
+++ b/src/styles/Roomnew.css
@@ -11,19 +11,26 @@
     background-color: blue;
 
 }
+.furniture_type{
+    padding: 10px;
+    font-weight: 500;
+    background-color: rgb(252, 238, 219);
+}
+.furniture_info{
+    font-size: large;
+    margin: 10px 20px;
+}
 .furniture_wrapper{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 .furniture_div{
     
   width: 70%;   
 }
 .roomcards{
+margin-top: 5px;
 width: 100%;
-/* background-color: aqua; */
 position: relative;
 height: 100%;
 }
@@ -77,16 +84,34 @@ background-color: aquamarine;
 /* .slick-slide1{
     width: !important;
 } */
-.roomroomfur{
+
+.roomroomfur_active{
+    font-weight: 500;
+
     display: flex;
     cursor: pointer;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin: 3px 10px;
-    padding: 2px 10px;
+    margin: 2px 10px;
+    padding: 3px 3px;
     border-radius: 10px;
-    background-color: rgb(165, 108, 42);
+    background-color: rgb(238, 236, 236);
+    border: 1px solid gray;
+    white-space: nowrap;
+}
+.roomroomfur{
+    font-weight: 500;
+
+    display: flex;
+    cursor: pointer;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 2px 10px;
+    padding: 3px 3px;
+    border-radius: 10px;
+    border: 1px solid gray;
     white-space: nowrap;
 }
 .roommaininfo{
