--- a/src/styles/Roomsnew.css
+++ b/src/styles/Roomsnew.css
@@ -19,6 +19,9 @@
     width: 18rem;
     cursor: pointer;
 }
+.card_room:hover{
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
 .navbar_wrapper{
     --bs-bg-opacity: 1;
     background-color: rgba(230, 199, 151, 0.5)!important;
@@ -82,9 +85,9 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     padding: 30px;
     gap: 15px;
-    align-items: center;
 }
 
 .roomrejected{
