--- a/src/styles/bodynew.css
+++ b/src/styles/bodynew.css
@@ -1,9 +1,10 @@
 body{
+    font-size: large;
+
     margin: 0px;
     overflow-x: hidden;
     font-family: "Lexend", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
-    font-weight: 400;
     color:#1B1C57;
 }
