--- a/src/styles/Main_form.css
+++ b/src/styles/Main_form.css
@@ -27,7 +27,7 @@
   /* padding: 40px; */
   height: 70px;
   font-size: 18px;
-  margin-top: 60px;
+  /* margin-top: 60px; */
   text-transform: uppercase;
   font-family: 'Montserrat Medium 500', sans-serif;
   letter-spacing: 5px;
@@ -39,12 +39,12 @@
 }
 
 .room_type_header{
-  padding: 40px;
+  padding: 30px;
+  padding-bottom: 10px;
   font-size: 18px;
   text-transform: uppercase;
   font-family: 'Montserrat Medium 500', sans-serif;
   letter-spacing: 5px;
-  margin-bottom: 0.8rem;
   color: #000000;
   outline: none;
   text-align: center;
