--- a/src/styles/navnew.css
+++ b/src/styles/navnew.css
@@ -8,9 +8,9 @@
     background-color: #f8e3ab;
     color: black;
     height:7vh;
-    font-size: large;
-
+    font-size: medium;
 }
+
 .navbarbrand-title{
     cursor: pointer;
 }
@@ -19,8 +19,8 @@
 }
 #navoption{
     position: relative;
-    border-radius: 10px;
-    padding: 10px;
+    padding: 5px ;
+    margin: 5px;
     cursor: pointer;
     transition: 0.3 ease-in-out;
 }
@@ -34,8 +34,8 @@
     width: 50%; 
     height: 2px;
     background-color: rgb(255, 255, 255);
-    left: 10px;
-    bottom: 10px;
+    left: 5px;
+    bottom: 5px;
 }
 
 #navoption.active::after{
@@ -49,7 +49,6 @@
 }
 #mobile{
     display: none;
-    font-size: 20px;
 }
 #mobile i {
 color: rgb(0, 0, 0);
@@ -57,6 +56,7 @@ color: rgb(0, 0, 0);
 cursor: pointer;
 }
 @media screen and (max-width:729px) {
+
     .navbaroptions{
         display: flex;
         flex-direction: column;
