--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -1,216 +1,3 @@
-/* body{
-    overflow-x: hidden;
-    max-width: 100%;
-}
-body > .container {
-    padding: 60px 15px 100px;
-    
-}
-.new_main{
-    background-color: #FDF2E9;
-}
-
-.header{
-    align-content: center;
-    align-self: center;
-    width: 100%;
-    position: fixed;
-    z-index: 9999;
-    top: 0;
-    display: grid;
-    grid-template-areas: 'logo group';
-    height: 70px;
-    justify-content: space-between;
-    background-color: #FDF2E9;
-    align-items: center;
-}
-.footer1{
-    align-content: center;
-    align-self: center;
-    width: 100%;
-    align-items: center;
-    height: 400px;
-    background-color: #FAECE1;
-}
-.footer2{
-    align-content: center;
-    align-self: center;
-    width: 100%;
-    align-items: center;
-    height: 600px;
-    background-color: #FAECE1;
-}
-.button_group{
-    grid-area: "group";
-    grid-template-areas: 'button1 button2 button3';
-}
-
-.logo{
-    grid-area: "logo";
-    color: #000000;
-    font-size: 20px;
-    font-family: 'Montserrat Medium 500', sans-serif;
-    letter-spacing: 3px;
-    padding: 15px 10px 20px 7px;
-    cursor: pointer;
-    transition: all 0.3s;
-    margin-left: 15px;
-}
-
-.header_button-login{
-    border: none;
-    grid-area: "button1";
-    font-size: 16px;
-    font-family: 'Montserrat Medium 500', sans-serif;
-    background-color: #f3e8c9;
-    color: rgb(0, 0, 0);
-    border-radius: 12px;
-    padding: 10px 18px;
-    cursor: pointer;
-    transition: all 0.3s;
-    margin: 5px
-}
-
-.header_button-login:hover{
-    background-color: #efd8b5;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
- }
-
-@media screen and (max-width:480px){
-    .logo{
-        padding: 20px 10px 20px 7px;
-    }
-    .header_button-login{
-        font-size: 14px;
-        background-color: #f3e8c9;
-        color: rgb(0, 0, 0);
-        border-radius: 5px;
-        padding: 10px 8px;
-        cursor: pointer;
-        transition: all 0.3s;
-        margin-left: 5px;
-    }
-}
-
-.logo:hover{
-    color: #efd8b5;
-}
-
-img {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
- }
-
-.outer{
-    width: 100%;
-}
-
-.numbers{
-    color: black;
-    margin-left: 180px;
-    margin-right: 180px;
-    font-size: 16px;
-    font-family: 'Montserrat Medium 500', sans-serif;
-    padding: 20px 10px 20px 40px;
-    background-color: #FFEDCE;
-    text-align: center;
-    border-radius: 15px;
-}
-
-.numbers1{
-    color: black;
-    margin-left: 180px;
-    margin-right: 180px;
-    font-size: 16px;
-    font-family: 'Montserrat Medium 500', sans-serif;
-    padding: 20px 10px 20px 15px;
-    background-color: #FFEDCE;
-    text-align: center;
-    border-radius: 15px;
-}
-
-.fa {
-    text-decoration: none;
-    border-radius: 70%;
-}
-  
-.fa:hover {
-    color: #efd8b5;
-    opacity: 1;
-}
-  
-.fa-instagram {
-    margin-left: 0px;
-    padding: 10px;
-    background: #FFEDCE;
-    color: black;
-}
-  
-.fa-youtube {
-    margin-left: 20px;
-    padding: 10px;
-    background: #FFEDCE;
-    color: black;
-}
-
-.fa-dribbble {
-    margin-left: 20px;
-    padding: 10px;
-    background: #FFEDCE;
-    color: black;
-}
-
-.greeting{
-    text-transform: uppercase;
-    letter-spacing: 5px;
-    background-color: #FDF2E9;
-    color: black;
-    font-family: 'Montserrat Medium 500', sans-serif;
-    font-size: 20px;
-    padding: 25px 10px 25px 10px;
-    text-align: center;
-}
-
-.heading {
-    padding: 20px;
-    text-transform: uppercase;
-    letter-spacing: 5px;
-    font-size: 18px;
-    font-family: 'Montserrat Medium 500', sans-serif;
-    color: black;
-    outline: none;
-    text-align: center;
-  }
-
-  .heading1 {
-    font-size: 18px;
-    text-transform: uppercase;
-    letter-spacing: 5px;
-    font-family: 'Montserrat Medium 500', sans-serif;
-    color: black;
-    text-align: center;
-  }
-
-  @media screen and (max-width:480px){
-    .numbers{
-        margin: 20px;
-        margin-top: -20px;
-        padding: 20px 10px 20px 7px;
-        font-size: 16px;
-    }
-    .numbers1{
-        margin: 20px;
-        margin-top: -20px;
-        padding: 20px 10px 20px 7px;
-        font-size: 16px;
-    }
-    .greeting{
-        font-size: 20px;
-    }
-} */
-
 .new_main{
     display: flex;
 }
@@ -243,8 +30,6 @@ color: "black";
 font-family: "Montserrat", sans-serif;
 font-weight: 900; 
 font-size: 23px;
-
-/* letter-spacing: 5px; */
 }
 .input_group{
     display: flex;
@@ -337,11 +122,8 @@ font-size: 23px;
     height: 20px;
 }
 .card-body{
-    display: flex;
     align-items: center;
     justify-content: center;
-    /* flex-direction: column; */
-    /* background: #FDF2E9; */
     align-items: center;
     border-radius: '5px';
     border: none!important;
@@ -372,12 +154,20 @@ font-size: 23px;
 .heading_login{
     display: flex;
     justify-content: center;
-    margin-top: 100px;
+    margin: 30px;
 }
 .login_wrapper{
     display: flex;
     flex-direction: column;
-    /* align-self: center; */
-    /* justify-content: center; */
-    gap: 18%;
+}
+
+.button_add_curators{
+    width: 100%;
+    background-color: #f7d474;
+    border: none;
+    border-radius: 12px;
+    margin-top: 15px;
+    font-size: 16px;
+    padding: 10px;
+
 }
