--- a/src/styles/Rooms.css
+++ b/src/styles/Rooms.css
@@ -11,6 +11,8 @@
 .card_header_wrapper{
     display: flex!important;
     flex-direction: row!important;
+    justify-content: center;
+    align-self: center;
 }
 .card-body{
     flex-direction: row!important;
