--- a/src/styles/navnew.css
+++ b/src/styles/navnew.css
@@ -1,7 +1,8 @@
 .navbar_m {
     display: flex;
     align-items: center;
-    position: relative;
+    position: fixed;
+    width: 100%;
     padding: 20px;
     justify-content: space-between;
     align-items: center;
@@ -9,6 +10,7 @@
     color: black;
     height:7vh;
     font-size: medium;
+    z-index: 1;
 }
 
 .navbarbrand-title{
