--- a/src/styles/Roomsnew.css
+++ b/src/styles/Roomsnew.css
@@ -45,13 +45,13 @@
 
 .search {
     display: flex;
-    justify-content: center; /* Horizontally center the items */
-    align-items: center; /* Vertically center the items */
+    justify-content: center;
+    align-items: center;
     
-    margin-top: 2%; /* Adjust margin as needed */
+    margin-top: 2%;
 }
 .search-input {
-    margin-left: 40%; /* Adjust margin as needed */
+    margin-left: 40%;
     margin-top: 2%;
 }
 
@@ -66,7 +66,7 @@
     height: 45px;
     width: 300px;
     margin-right: 10px;
-    border: 1px solid #8D0709; /* Set border to 1px solid with the desired color */
+    border: 1px solid #8D0709;
     border-radius: 16px;
 }
 
@@ -152,7 +152,6 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    /* padding: 30px; */
     gap: 15px;
     margin-top: 7vh;
 }
@@ -255,9 +254,9 @@ background-color: aquamarine;
 
 
 .input-room:focus {
-    outline: none; /* Remove default focus outline */
-    border-color: #8D0709; /* Change border color when focused */
-    box-shadow: 0 0 0 1px #8D0709; /* Add a box shadow when focused */
+    outline: none;
+    border-color: #8D0709;
+    box-shadow: 0 0 0 1px #8D0709;
 }
   
 .name-container {
@@ -267,17 +266,17 @@ background-color: aquamarine;
   }
   
   .circle {
-    width: 15px; /* Adjust the width and height as needed for the circle */
+    width: 15px;
     height: 15px;
-    border-radius: 50%; /* Make it a circle */
+    border-radius: 50%;
   }
   
   .roomaccepted {
-    background-color: #429354; /* Style for accepted room */
+    background-color: #429354;
   }
   
   .roomrejected {
-    background-color: #8D0709; /* Style for rejected room */
+    background-color: #8D0709;
   }
   
 .card_header_wrapper.card-body {
